style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
    box-sizing: border-box;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*page style below here*/

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    gap: 3em;
    overflow-x: hidden;
}

header {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    gap: 1em;
    position: relative;
    padding-top: 2rem;
    overflow-x: hidden;
}

header::before {
    position: absolute;
    top: 0;
    content: " ";
    width: 100%;
    height: 45%;
    background: teal;
    z-index: -1;
    transform: skewY(-8deg);
    transform-origin: 0 100%;
}

.header-container {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    gap: 1em;
    position: relative;
}


.header-container > div:first-child {
    position: relative;
    width: 80%;
    min-width: 250px;
    box-shadow: grey 2px 2px 4px;
}

/*style for header picture and name*/
@keyframes slide-in-from-left {
    from {
        transform: translateX(-150%);
    }

    to {
        transform: translateX(0);
    }
}

@keyframes slide-in-from-right {
    from {
        transform: translate(600px, -100%);
    }

    to {
        transform: translate(0, -100%);
    }
}

.name {
    font: 3rem "Times New Roman";
    text-align: center;
    position: absolute;
    width: 100%;
    animation: slide-in-from-right 1s ease-out forwards;
    color: goldenrod;
    text-shadow: blue 1px 1px;
    background-color: bisque;
}

img.profile-picture {
    object-fit: cover;
    height: 100%;
    width: 100%;
    animation: slide-in-from-left 1s ease-out forwards;
}

/*about me section*/

.header-container > div:last-child {
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1.2em;
}

.header-container > div:last-child > h2 {
    font: 2rem helvetica;
}

.header-container > div:last-child > p {
    color: grey;
    font: 1.2rem helvetica;
}

nav {
    display: flex;
    gap: 1em;
}

nav img {
    width: 40px;
    height: 40px;
}

/*middle style*/

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1em;
}

main > h2 {
    font: 2rem helvetica;
    width: 80%;
    text-align: center;
}

main > div.projects-container {
    display: grid;
    justify-content: space-between;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    row-gap: 2em;
    column-gap: 2em;
    width: 80%;
} 

section {
    display: flex;
    flex-direction: column;
    gap: 1.5em;
    box-shadow: gray 2px 2px 2px;
    padding-bottom: 2em;
    transition: transform 300ms ease-in 200ms;
}

section:hover {
    transform: scale(1.05, 1.05);
}

section > div:first-child {
    width: 100%;
    min-height: 200px;
    background: red;
}

section > div {
    padding: 0 1em;
    display: flex;
    justify-content: space-between;
}

h4 {
    font: 1.2rem "helvetica";
}

.project-links-container {
    display: flex;
    gap: 1em;
}

.project-links-container > a > img {
    width: 26px;
    height: 26px;
}

section > div > a > img {
    width: 26px;
    height: 26px;
}

/*footer style below*/

footer {
    display: flex;
    flex-direction: column;
    gap: 2em;
    justify-content: center;
    align-content: center;
    background-color: aqua;
}

footer > div.contact-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 2em;
}

div.contact-info > div:first-child {
    display: flex;
    flex-direction: column;
    gap: 1em;
    width: 80%;
}

div.contact-info h2 {
    align-self: center;
    font: 2rem helvetica;
}

div.contact-info > div > p {
    font: 1.2rem helvetica;
}

div.contact-info nav {
    align-self: center;
}

address {
    display: flex;
    flex-direction: column;
    gap: 0.5em;
    font: 1.2rem "helvetica";
}

.footer-img > img {
    object-fit: contain;
    width: 100%;
    height: 100%;
}

@media (min-width: 750px) {
    header {
        padding-top: 8rem;
    }
    
    .header-container {
        display: block;
        width: 90%;
        background: whitesmoke;
        box-shadow: grey 0 0 2px;
    }

    .header-container > div:first-child {
        float: left;
        width: 400px;
        margin: -5rem 2rem 1rem -2rem;
    }

    @keyframes slide-in-from-right-750px {
        from {
            transform: translate(100vw, -580px);
        }

        to {
            transform: translate(80%, -580px);
        }
    }

    .header-container > div:first-child > h2 {
        animation: slide-in-from-right-750px 1s ease-in forwards;
        background: transparent;
    }

    .header-container > div:last-child {
        width: auto;
        display: block;
        padding: 4em 2em;
    }

    .header-container > div:last-child > h2 {
        padding-bottom: 1rem;
        text-align: center;
    }

    .header-container > div:last-child > nav {
        display: none;
    }

    main > h2 {
        text-align: start;
    }

    div.contact-info h2 {
        align-self: stretch;
    }

    footer {
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    .footer-img {
        padding: 2em;
        max-width: 500px;
    }
}

@media (min-width: 1100px) {
    header {
        padding-top: 2rem;
    }

    .header-container {
        width: 80%;
        background: transparent;
        box-shadow: none;
        display: flex;
        flex-direction: row;
        align-items: stretch;
        gap: 0;
    }

    .header-container > div:first-child {
        float: none;
        margin: 0;
    }

    .header-container > div:first-child > h2 {
        animation: slide-in-from-right 1s ease-in forwards;
        background: bisque;
    }

    .header-container > div:last-child {
        background: whitesmoke;
        box-shadow: grey 0 0 2px;
        padding: 1em;
        display: flex;
        flex: 1 1 500px;
        align-self: center ;
    }

    .header-container > div:last-child > nav {
        display: flex;
        align-self: end;
    }

    address {
        font: 1.6rem helvetica;
    }

    .footer-img {
        max-width: 700px;
    }
}

